подсчет количества человек, сделал дату платежного поручения

--- a/MinjustXml/MainWindow.xaml
+++ b/MinjustXml/MainWindow.xaml
@@ -15,6 +15,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="20"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="35"/>
         </Grid.RowDefinitions>
         <Menu x:Name="menu" Grid.Row="0" Grid.ColumnSpan="2">
             <MenuItem Header="Файл">
@@ -23,20 +24,19 @@
             <MenuItem Header="Редактировать"/>
             <MenuItem Header="Вид"/>
             <MenuItem Header="Помощь"/>
-            <TextBox x:Name="searchData" Grid.Column="0" Text="Поиск" Width="100" Margin="420 0 0 0" MouseDoubleClick="searchData_MouseDoubleClick"></TextBox>
         </Menu>
         <DataGrid Grid.Row="1" AutoGenerateColumns="False" x:Name="peoplesGrid" CanUserAddRows="True">
-
             <DataGrid.Columns>
                 <DataGridTextColumn x:Name="IdPlat" Binding="{Binding NOM_LINE}" Header="Номер" Width="100"/>
                 <DataGridTextColumn x:Name="NamePlat" Binding="{Binding FIO_PLAT}" Header="ФИО плательщика" Width="*"/>
                 <DataGridTextColumn Binding="{Binding ADRESS_PLAT}" Header="Адрес плательщика" Width="*"/>
-                <DataGridTextColumn Binding="{Binding GetDate}" Header="Дата платежного поручения" Width="*"/>
+                <DataGridTextColumn Binding="{Binding GetDate}" Header="Дата поступления в реестр" Width="*"/>
                 <DataGridTextColumn Binding="{Binding SUM_REESTR_PP}" Header="Сумма" Width="200"/>
                 <DataGridTextColumn Binding="{Binding ID_OPER}" Header="ID операции" Width="*"/>
                 <DataGridTextColumn Binding="{Binding PURPOSE }" Header="Цель платежа" Width="*"/>
             </DataGrid.Columns>
-        </DataGrid> 
+        </DataGrid>
+        <TextBlock x:Name="countregs" FontSize="20" FontFamily="Bold" Margin="0 0 10 0"  Grid.Row="2"  Height="25" HorizontalAlignment="Right"/>
     </Grid>
 </Window>
  
