--- a/MinjustXml/MainWindow.xaml
+++ b/MinjustXml/MainWindow.xaml
@@ -43,11 +43,10 @@
         <TextBlock x:Name="countregs" FontSize="20" FontFamily="Bold" Margin="0 0 10 0"  Grid.Row="3"  Height="25" HorizontalAlignment="Right"/>
         <TextBlock x:Name="datepp" FontSize="20" FontFamily="Bold" Margin="0 0 10 0"  Grid.Row="3"  Height="25" HorizontalAlignment="Left"/>
         <Button Grid.Row="1" Width="80" HorizontalAlignment="Left" Margin="280 0 0 0 " Click="Button_Click" IsDefault="True">
-            <Button.ContentTemplate >
-                <DataTemplate >
-                    <Image Source="C:\Users\Давид\source\repos\MinjustXml\MinjustXml\Images\с.ico" />
-                </DataTemplate>
-            </Button.ContentTemplate>
+            <StackPanel Orientation="Horizontal">
+                <Image Source="C:\Users\Давид\source\repos\MinjustXml\MinjustXml\Images\с.ico" Width="15"></Image>
+                <TextBlock Text="Поиск" FontSize="12" FontFamily="Times New Roman"></TextBlock>
+            </StackPanel>
         </Button>
     </Grid>
 </Window>
