--- a/MinjustXml/MainWindow.xaml
+++ b/MinjustXml/MainWindow.xaml
@@ -30,7 +30,8 @@
         <DataGrid Grid.Row="2" AutoGenerateColumns="False" x:Name="peoplesGrid" CanUserAddRows="False" CanUserResizeRows="False" IsReadOnly="True" >
             <DataGrid.Columns>
                 <DataGridTextColumn x:Name="IdPlat" Binding="{Binding NOM_LINE}" Header="Номер" Width="100"/>
-                <DataGridTextColumn x:Name="NomPayDoc" Binding="{Binding NOM_PAY_DOC, Mode=TwoWay}" Header="Номер платежного поручения" Width="100"/>
+                <DataGridTextColumn x:Name="NomPayDoc" Binding="{Binding NOM_PAY_DOC}" Header="Номер платежного поручения" Width="*"/>
+                <DataGridTextColumn x:Name="DatePPDoc" Binding="{Binding DATE_PAY_DOC}" Header="Дата платежного поручения" Width="*"/>
                 <DataGridTextColumn x:Name="NamePlat" Binding="{Binding FIO_PLAT}" Header="ФИО плательщика" Width="*"/>
                 <DataGridTextColumn Binding="{Binding ADRESS_PLAT}" Header="Адрес плательщика" Width="*"/>
                 <DataGridTextColumn Binding="{Binding GetDate}" Header="Дата поступления в реестр" Width="*"/>
